--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "express": "^4.16.4",
+    "mongoose": "^5.4.14",
+    "morgan": "^1.9.1",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1"
   },
