Backend part - 2 (nodemailer)

--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "run:server": "node server/server.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "express": "^4.16.4",
     "mongoose": "^5.4.14",
     "morgan": "^1.9.1",
+    "nodemailer": "^5.1.1",
     "vue": "^2.6.6",
     "vue-material": "^0.8.1",
     "vue-router": "^3.0.1"
