--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/node": "^7.2.2",
     "@vue/cli-plugin-babel": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
     "vue-template-compiler": "^2.5.21"
   }
 }
